<package format="3">
  <name>dds_rostopic</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>

  <maintainer email="401435318@qq.com">shine</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>unitree_sdk2</depend>
  <depend>opencv4</depend>
  <depend>cv_bridge</depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>gstreamer</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
