<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>voice_chat_py</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="401435318@qq.com">smx</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>python3-pyaudio</depend>  <!-- 新增音频设备依赖 -->
  <depend>python3-speechrecognition</depend>  <!-- 新增语音识别依赖 -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
